    	very long vectors.  (PR#14267)

    o	Rd2latex() incorrectly escaped special characters in \usage sections.

    o	mcnemar.test() could alter the levels (dropping unused levels)
	if passed 'x' and 'y' as factors (reported by Greg Snow).

    o	Rd2pdf sometimes needed a further pdflatex pass to get
	hyperlinked pages correct.



		CHANGES IN R VERSION 2.11.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Packages must have been installed under R >= 2.10.0, as the
	current help system is the only one now supported.

    o	A port to 64-bit Windows is now available as well as binary
	package repositiories: see the 'R Administration and
	Installation Manual'.

    o	Argument matching for primitive functions is now done in the
	same way as for interpreted functions except for the deliberate
	exceptions

	    call switch .C .Fortran .Call .External

	all of which use positional matching for their first argument,
	and also some internal-use-only primitives.

    o	The default device for command-line R at the console on Mac OS X
	is now quartz() and not X11().


NEW FEATURES

    o	The 'open' modes for connections are now interpreted more
	consistently.  open = "r" is now equivalent to open = "rt" for
	all connections.  The default open = "" now means "rt" for all
	connections except the compressed file connections gzfile(),
	bzfile() and xzfile() for which it means "rb".

    o	R CMD INSTALL now uses the internal untar() in package utils:
	this ensures that all platforms can install bzip2- and
	xz-compressed tarballs.	 In case this causes problems (as it
	has on some Windows file systems when run from Cygwin tools)
	it can be overridden by the environment variable
	R_INSTALL_TAR: setting this to a modern external tar program
	will speed up unpacking of large (tens of Mb or more)
	tarballs.

    o	help(try.all.packages = TRUE) is much faster (although the
	time taken by the OS to find all the packages the first time
	it is used can dominate the time).
