@@ -51,7 +51,11 @@ SEXP attribute_hidden do_split(SEXP call, SEXP op, SEXP args, SEXP env)
     for (i = 0; i < nlevs; i++) INTEGER(counts)[i] = 0;
     for (i = 0; i < nobs; i++) {
 	j = INTEGER(f)[i % nfac];
-	if (j != NA_INTEGER) INTEGER(counts)[j - 1]++;
+	if (j != NA_INTEGER) {
+	    /* protect against malformed factors */
+	    if (j > nlevs || j < 1) error(_("factor has bad level"));
+	    INTEGER(counts)[j - 1]++;
+	}
     }
     /* Allocate a generic vector to hold the results. */
     /* The i-th element will hold the split-out data */
